# Linear-regression

./: Multiple_Linear_regression.ipynb  Regressor.pkl  pyproject.toml  simplelinearregression.ipynb
